syntax= "proto3";

package chat;

option go_package="mgrankin-cloud.sso.v1;chat";

service Chat {
    rpc GetChat(GetChatRequest) returns (GetChatResponse);

    rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);

    rpc UpdateChat(UpdateChatRequest) returns (UpdateChatResponse);

    rpc DeleteChat(DeleteChatRequest) returns (DeleteChatResponse);
}

message GetChatRequest {
    int64 chat_id = 1;
}

message GetChatResponse {
    string chat_name = 1;
    bytes photo = 2;
    ChatType chat_type = 3;
    bool success = 4;
}

enum ChatType {
    CHAT_TYPE_UNSPECIFIED = 0;
    CHAT_TYPE_GROUP = 1;
    CHAT_TYPE_PERSONAL = 2;
}

message CreateChatRequest {
    string chat_name = 1;
    bytes photo = 2;
    ChatType chat_type = 3;
}

message CreateChatResponse {
    bool success = 1;
    int64 chat_id = 2;
}

message UpdateChatRequest {
    int64 chat_id = 1;
    string chat_name = 2;
    bytes photo = 3;
}

message UpdateChatResponse {
    bool success = 1;
    int64 chat_id = 2;
}

message DeleteChatRequest {
    int64 chat_id = 1;
}

message DeleteChatResponse {
    bool success = 1;
    int64 chat_id = 2;
}