syntax= "proto3";

package message;

option go_package="mgrankin-cloud.sso.v1;ssov5";

import "google/protobuf/timestamp.proto";

service Message {
    rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);

    rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse);

    rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse);

    rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);

    rpc PinMessage (PinMessageRequest) returns (PinMessageResponse) {}
}

message GetMessageRequest {
    int64 message_id = 1;
}

message GetMessageResponse {
    int64 message_id = 1;
    string content = 2;
    google.protobuf.Timestamp created_at = 3;
    int64 created_by = 4;
    int64 reply_to = 5;
    int64 received_by = 6;
    google.protobuf.Timestamp received_at = 7;
    string status = 8;
    bool is_read = 9;
}

message CreateMessageRequest {
    string content = 1;
    google.protobuf.Timestamp created_at = 2;
    int64 created_by = 3;
    int64 reply_to = 4;
    int64 received_by = 5;
    google.protobuf.Timestamp received_at = 6;
    string status = 7;
    bool is_read = 8;
}

message CreateMessageResponse {
    bool success = 1;
    int64 message_id = 2;
}

message UpdateMessageRequest {
    int64 message_id = 1;
    string content = 2;
    string status = 3;
    bool is_read = 4;
}

message UpdateMessageResponse {
    bool success = 2;
}

message DeleteMessageRequest {
    int64 message_id = 1;
}

message DeleteMessageResponse {
    bool success = 2;
}

message PinMessageRequest {
    int64 message_id = 1;
    bool pin = 2;
}

message PinMessageResponse {
    bool success = 1;
}


